# SnakeGameCpp_OOP_Project

./: Board.cpp  Board.h  CMakeLists.txt  Food.cpp  Food.h  Game.cpp  Game.h  MovableGameObject.h  ScoreManager.cpp  ScoreManager.h  Snake.cpp  Snake.h  SnakeSegment.cpp  SnakeSegment.h  StorageManager.cpp  StorageManager.h  UIManager.cpp  UIManager.h  main.cpp  scores.txt
